# frugalware-current

./: .editorconfig  .gitignore  .mailmap  AUTHORS  COPYRIGHT  ChangeLog.txt  FOR-CURRENT  NEWS  NEWS.hu  README.GPG  TODO  amaya-11.1-1-i686.patch  autorevision.cache
docs/: .gitignore  Makefile  README.adoc  about.adoc  about.txt  artwork-rules.adoc  artwork-rules.txt  asciidoc.txt  bugs.adoc  bugs.txt  compiz-bump-howto.adoc  contribute.adoc  contribute.txt  develfaq.txt  gcc-bumps.adoc  getting-involved.adoc  getting-involved.txt  gnome-bump-howto.txt  gnustep-bump-howto.txt  gpg.adoc  gpg.txt  header.txt.in  hotplug.adoc  hotplug.txt  ids.adoc  ids.html  ids.txt  index-devel.adoc  index-devel.txt  index-user.html  index-user.txt  index.txt  init.adoc  init.html  init.txt  install.html  install.txt  introduction.adoc  introduction.txt  irc-rules.html  (+51 more)
extra/: README
source/: LIST  LIST-FFI-EXTRA  LIST-FFI-MAIN  README.kdetesting  REMOVED.kdetesting  TODO  check  check.sh  rebuild.txt
source/games-extra/beret/: CMakeLists.txt  FrugalBuild  beret
t/: backup-slash  bigfiles  biggames  chkacc  deps-base-i686  deps-base.py  deps-corepkgs-i686  deps-corepkgs-x86_64  deps-corepkgs.py  deps-extra-i686  deps-extra-x86_64  deps-extra.py  deps-i686  deps-ppc  deps-x86_64  deps-xorg-i686  deps-xorg.py  deps.py  docs-en  emptydirs  etc  fpmcorrupt  fpminvalid  fpmjunk-arm  fpmjunk-i686  fpmjunk-ppc  fpmjunk-x86_64  fpmjunk.py  fpmmissing  fst  functions.sh  github-url  groups  j2sdk  kde  kde-3  kde-apps  kf5  lib64  mailer.sh  (+22 more)
testsuite/: Makefile  README  chkworld  fpmjunk  (+21 more)
(+26115 files in other folders)
